# v1

./: AUTHORS  CODING_STANDARDS  Doxyfile  Makefile.am  NEWS  PSODAicon_NO_Background.icns  README  README.html  README.in  THANKS  configure.ac  configure.windows.ac  debugconf  jaritall.sh  psodaMac.install4j  psodainstall.install4j  reconf  reconf.debug  runpsodagui  runsamples.sh  valgrind.howto  windowsinstall.install4j
src/gui/: ExecutePsodaCodeThread.java  GUIPSODA.h  MainMenu.java  MainTabs.java  Makefile.am  PSODA.h  PSODA.java  PsodaButtons.java  Registration.java  UndoRedo.java  UndoableContainer.java  mainClass.txt
src/gui/.deps/.svn/: all-wcprops  entries
src/gui/.svn/: all-wcprops  entries
src/gui/.svn/text-base/: ExecuteCommandFrame.java.svn-base  GuiCommandNode.cpp.svn-base  GuiCommandNode.h.svn-base  GuiCommandNode.java.svn-base  MyDocumentListener.java.svn-base  MyUndoableEditListener.java.svn-base  PSODA.cpp.svn-base  PSODA.pptx.svn-base  PsodaPanel.java.svn-base  QSodaModified.jpg.svn-base  listguiofiles.sh.svn-base
src/gui/Jalview/: JalviewApplet.jpx  README
src/gui/Jalview/.svn/: all-wcprops  entries
src/gui/Jalview/.svn/text-base/: ChangeLog.svn-base  JalviewX.jpx.svn-base  build.xml.svn-base  jalview-jalopy.xml.svn-base
src/gui/Jalview/classes/: embl_mapping.xml
src/gui/Jalview/classes/.svn/: all-wcprops  entries
src/gui/Jalview/classes/.svn/text-base/: uniprot_mapping.xml.svn-base
src/gui/Jalview/classes/MCview/.svn/: all-wcprops  entries
src/gui/Jalview/classes/com/.svn/: all-wcprops  entries
src/gui/Jalview/classes/doc/: AddingGroovySupport.html
src/gui/Jalview/classes/doc/.svn/: all-wcprops  entries
src/gui/Jalview/classes/ext/.svn/: all-wcprops  entries
src/gui/Jalview/classes/help/: helpTOC.html
src/gui/Jalview/classes/help/.svn/: all-wcprops  entries
src/gui/Jalview/classes/help/JavaHelpSearch/: DOCS  OFFSETS
src/gui/Jalview/classes/help/html/: index.html  whatsNew.html
src/gui/Jalview/classes/images/.svn/: all-wcprops  entries
src/gui/Jalview/classes/jalview/.svn/: all-wcprops  entries
src/gui/Jalview/classes/lib/.svn/: all-wcprops  entries
src/gui/Jalview/classes/org/.svn/: all-wcprops  entries
src/gui/Jalview/classes/uk/.svn/: all-wcprops  entries
src/gui/Jalview/classes/vamsas/.svn/: all-wcprops  entries
src/gui/Jalview/doc/: developing.html  newdmobj.html
src/gui/Jalview/doc/.svn/: all-wcprops  entries
src/gui/Jalview/doc/.svn/text-base/: index.html.svn-base
src/gui/Jalview/help/: help.jhm
src/gui/Jalview/help/.svn/: all-wcprops  entries
src/gui/Jalview/help/.svn/text-base/: help.hs.svn-base
src/gui/Jalview/help/html/: jalviewjnlp.html  keys.html
src/gui/Jalview/help/html/.svn/: all-wcprops  entries
src/gui/Jalview/help/html/calculations/: consensus.html  tree.html
src/gui/Jalview/help/html/colourSchemes/: abovePID.html  index.html  strand.html  textcolour.html
src/gui/Jalview/help/html/features/: annotation.html  dassettings.html  groovy.html  multipleViews.html  seqfetch.html  wrap.html
src/gui/Jalview/help/html/io/: index.html
src/gui/Jalview/help/html/menus/: alwannotations.html  alwformat.html  desktopMenu.html  index.html  popupMenu.html  wsmenu.html
src/gui/Jalview/help/icons/.svn/: all-wcprops  entries
src/gui/Jalview/lib/.svn/: all-wcprops  entries
src/gui/Jalview/resources/.svn/: all-wcprops  entries
src/gui/Jalview/resources/images/.svn/: all-wcprops  entries
src/gui/Jalview/schemas/: JalviewUserColours.xsd  jalview.nodesc.properties  jalview.properties  jalviewJvV1.xsd
src/gui/Jalview/schemas/.svn/: all-wcprops  entries
src/gui/Jalview/schemas/.svn/text-base/: castor-mapping.xsd.svn-base  jalview.xsd.svn-base  vamsas.xsd.svn-base  vamsasJvV1.xsd.svn-base
src/gui/Jalview/src/.svn/: all-wcprops  entries
src/gui/Jalview/src/MCview/: Atom.java  Bond.java  MCMatrix.java  PDBViewer.java  PDBfile.java
src/gui/Jalview/src/MCview/.svn/: all-wcprops  entries
src/gui/Jalview/src/com/.svn/: all-wcprops  entries
src/gui/Jalview/src/ext/.svn/: all-wcprops  entries
src/gui/Jalview/src/ext/vamsas/: IRegistry.java  MuscleWS.java  RegistryServiceSoapBindingStub.java  SeqSearchI.java  SeqSearchServiceLocator.java  SeqSearchServiceService.java  ServiceHandle.java  ServiceHandles.java
src/gui/Jalview/src/jalview/.svn/: all-wcprops  entries
src/gui/Jalview/src/jalview/analysis/: AlignSeq.java  PCA.java  ParseProperties.java  SeqsetUtils.java
src/gui/Jalview/src/jalview/appletgui/: APopupMenu.java  AlignViewport.java  AnnotationPanel.java  AppletJmol.java  CutAndPasteTransfer.java  EditNameDialog.java  FeatureRenderer.java  FontChooser.java  PCAPanel.java  PairwiseAlignPanel.java  RotatableCanvas.java  ScalePanel.java  SliderPanel.java  TreeCanvas.java  TreePanel.java  UserDefinedColours.java
src/gui/Jalview/src/jalview/binding/: Alignment.java  Annotation.java  AnnotationElement.java  Colour.java  Feature.java  FeatureSettings.java  Features.java  JSeq.java  JalviewModel.java  SequenceSet.java  Tree.java  UserColourScheme.java  UserColours.java  VamsasModel.java  Viewport.java
src/gui/Jalview/src/jalview/commands/: ChangeCaseCommand.java  EditCommand.java  RemoveGapsCommand.java  TrimRegionCommand.java
src/gui/Jalview/src/jalview/datamodel/: AlignedCodonFrame.java  Alignment.java  AlignmentAnnotation.java  BinarySequence.java  CigarArray.java  ColumnSelection.java  DBRefEntry.java  FeatureProperties.java  GraphLine.java  HiddenSequences.java  PDBEntry.java  Provenance.java  ProvenanceEntry.java  SearchResults.java  SequenceFeature.java  (+3 more)
src/gui/Jalview/utils/.svn/: all-wcprops  entries
src/gui/Jalview/utils/InstallAnywhere/: Jalview.iap_xml  jalview_buildinstaller.xml
src/parsers/paupParser/: Makefile.am  ParsingInfo.h  PaupLexicalAnalyzer.ll  PaupParser.yy  PsodaSourceParser.h
src/parsers/paupParser/.svn/: all-wcprops  entries
src/parsers/paupParser/.svn/text-base/: ParsingInfo.cpp.svn-base  PaupLexicalAnalyzer.cpp.svn-base  PaupParser.cpp.svn-base  PaupParser.h.svn-base  PaupParser.hpp.svn-base  PsodaSourceParser.cpp.svn-base
(+3217 files in other folders)
